<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CalendarioFragment"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/Calendario"
        android:textColor="@color/blanco"
        android:background="@drawable/barra_title"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_final"
        android:textSize="15dp"
        android:textColor="@color/negro"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/fechaFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XX XX XXXX"
        android:textSize="50dp"
        android:textColor="@color/negro"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_calendar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:background="@drawable/btn_circle"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/fecha_inicial"
                android:textSize="15dp"
                android:textColor="@color/negro"
                android:gravity="center"/>

            <Button
                android:id="@+id/datePickerButton"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="JAN 01 2022"
                android:textSize="18sp"
                android:textColor="@color/black"
                style="?android:spinnerStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/fecha_termino"
                android:textSize="15dp"
                android:textColor="@color/negro"
                android:gravity="center"/>

            <Button
                android:id="@+id/datePickerButton2"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="JAN 01 2022"
                android:textSize="18sp"
                android:textColor="@color/black"
                style="?android:spinnerStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>