<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AbrirCajaFragment"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/AbrirCaja"
        android:textColor="@color/blanco"
        android:background="@drawable/barra_title"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introducir"
            android:textSize="15dp"
            android:textColor="@color/negro"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/PassAleatoria"
            android:text="XXXXXX"
            android:textColor="@color/negro"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"/>

    <EditText
        android:id="@+id/passIngresada"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:autofillHints="password"
        tools:ignore="LabelFor" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_abrir_password"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abrir"
        android:background="@drawable/btn_circle"/>

</LinearLayout>